--- a/index.html
+++ b/index.html
@@ -4106,7 +4106,7 @@
                                 </div>
                                 <div class="uagb-ifb-title-wrap">
                                   <h5 class="uagb-ifb-title">
-                                    Negotiate NIL Agreements
+                                    Evaluate NIL Agreements
                                   </h5>
                                 </div>
                               </div>
